fixed overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&family=Open+Sans:wght@300;400&display=swap");
 
+
+
 .button-sound {
     cursor: pointer;
 }
@@ -428,6 +430,9 @@ body {
     flex-direction: column;
     justify-content: space-between;
     min-height: 100vh;
+    position: relative;
+    
+    
 }
 
 h1,
@@ -1054,6 +1059,7 @@ i {
 }
 
 .overlay {
+
     position: fixed;
     left: 0;
     top: 0;
@@ -1077,6 +1083,7 @@ i {
 }
 
 .header {
+
     position: absolute;
     top: 0;
     width: 100%;
@@ -1088,6 +1095,7 @@ i {
 }
 
 .header.sticky {
+
     background: #2e0327;
     position: fixed;
     top: 0;
@@ -1428,6 +1436,7 @@ i {
 }
 
 .header-trigger span {
+    
     width: 25px;
     height: 2px;
     background: #fff;
